# bokeh

./: Cargo.toml  Justfile  LICENSE  README.md  flake.nix
docs/: plot_kernels.py
examples/: kernel_data.rs  main.rs
src/: complex.rs  gaussian.rs  lib.rs  main.rs  params.rs
