[package]
name = "bokeh"
version = "0.1.0"
authors = ["Tristan Laurens <tristanlaurens@hotmail.com"]
edition = "2024"
license = "MIT"

readme = "README.md"
description = "A Rust implementation of image-blurring, focussing on disc-shaped kernels to produce a bokeh lens-effect."
repository = "https://github.com/tristan-jl/bokeh"

keywords = ["blur", "bokeh", "convolution"]
categories = ["computer-vision", "multimedia::images"]

[dependencies]
image = { version = "0.25", optional = true }
num = "0.4"
paste = "1.0"
rayon = "1.12"

[features]
default = ["image"]
image = ["dep:image"]

[profile.dev]
opt-level = 3
